add pipeline for legal docs

--- a/practices/create_practice_collection.ipynb
+++ b/practices/create_practice_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# directory, where Chroma will store collections\n",
-    "CHROMADB_STORAGE_FOLDER = Path(\"/home/deniskirbaba/Documents/legal-ai/practice_db/storage\")\n",
+    "CHROMADB_STORAGE_FOLDER = Path(\"/home/deniskirbaba/Documents/legal-ai/storage\")\n",
     "\n",
     "# directory with data, used to init legal practice collection (i.e. documents, embeddings, metadata)\n",
     "LEGAL_PRACTICES_DATA_FOLDER = Path(\"/home/deniskirbaba/Documents/legal-ai/practice_db/data\")\n",
@@ -103,14 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:chromadb.telemetry.product.posthog:Anonymized telemetry enabled. See                     https://docs.trychroma.com/telemetry for more information.\n",
       "INFO:root:Start loading doc uids.\n",
       "INFO:root:Successfully load doc uids.\n",
       "INFO:root:Start loading embeddings.\n",
@@ -118,8 +117,16 @@
       "INFO:root:Start loading metadatas.\n",
       "INFO:root:Successfully load metadatas.\n",
       "INFO:root:Start loading summaries.\n",
-      "19347it [00:02, 7237.97it/s]\n",
+      "32830it [00:18, 1800.36it/s]\n",
       "INFO:root:Successfully load summaries.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 48s, sys: 21.2 s, total: 2min 9s\n",
+      "Wall time: 2min 29s\n"
      ]
     }
    ],
@@ -137,16 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Collection(name=legal_practices)]"
+       "[Collection(name=legal_practices), Collection(name=legal_docs)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +173,7 @@
        "18052"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +201,7 @@
        "  <IncludeEnum.metadatas: 'metadatas'>]}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
