--- a/docs/create_docs_collection.ipynb
+++ b/docs/create_docs_collection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,12 @@
     "CHROMADB_STORAGE_FOLDER = Path(\"/home/deniskirbaba/Documents/legal-ai/storage\")\n",
     "\n",
     "# directory with data, used to init legal practice collection (i.e. documents, embeddings, metadata)\n",
-    "LEGAL_DOCS_DATA_FOLDER = Path(\"./data\")"
+    "LEGAL_DOCS_DATA_FOLDER = Path(\"/home/deniskirbaba/Documents/legal-ai/docs_data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,20 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Start loading embeddings.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "INFO:root:Start loading embeddings.\n",
       "INFO:root:Successfully load embeddings.\n",
       "INFO:root:Start loading docs and metadatas.\n",
       "INFO:root:Successfully load docs and metadatas.\n",
@@ -109,8 +103,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 8s, sys: 8.28 s, total: 1min 17s\n",
-      "Wall time: 1min 23s\n"
+      "CPU times: user 1min 13s, sys: 8.58 s, total: 1min 21s\n",
+      "Wall time: 1min 18s\n"
      ]
     }
    ],
@@ -128,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +131,7 @@
        "[Collection(name=legal_docs)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +151,7 @@
        "17285"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,13 +162,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ids': ['baedf80e-0966-41a0-90c2-663bc1acec52'],\n",
+       "dict_keys(['ids', 'embeddings', 'documents', 'uris', 'data', 'metadatas', 'included'])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "legal_docs_collection.get().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ids': ['4fa72037-d7e6-41ec-a860-b091b2777496'],\n",
        " 'embeddings': None,\n",
        " 'documents': ['РАЗДЕЛ ПЕРВЫЙ\\n\\n\\nГЛАВА 1.\\n\\nОСНОВЫ КОНСТИТУЦИОННОГО СТРОЯ\\n\\n\\nСтатья 1\\n\\n\\n1. Российская Федерация - Россия есть демократическое федеративное правовое государство с республиканской формой правления.\\n\\n2. Наименования Российская Федерация и Россия равнозначны.\\n\\n\\nСтатья 2\\n\\n\\nЧеловек, его права и свободы являются высшей ценностью. Признание, соблюдение и защита прав и свобод человека и гражданина - обязанность государства.\\n\\n\\nСтатья 3\\n\\n\\n1. Носителем суверенитета и единственным источником власти в Российской Федерации является ее многонациональный народ.\\n\\n2. Народ осуществляет свою власть непосредственно, а также через органы государственной власти и органы местного самоуправления.\\n\\n3. Высшим непосредственным выражением власти народа являются референдум и свободные выборы.\\n\\n4. Никто не может присваивать власть в Российской Федерации. Захват власти или присвоение властных полномочий преследуются по федеральному закону.\\n\\n\\nСтатья 4\\n\\n\\n1. Суверенитет Российской Федерации распространяется на всю ее территорию.\\n\\n2. Конституция Российской Федерации и федеральные законы имеют верховенство на всей территории Российской Федерации.\\n\\n3. Российская Федерация обеспечивает целостность и неприкосновенность своей территории.\\n\\n\\nСтатья 5\\n\\n\\n1. Российская Федерация состоит из республик, краев, областей, городов федерального значения, автономной области, автономных округов - равноправных субъектов Российской Федерации.\\n\\n2. Республика (государство) имеет свою конституцию и законодательство. Край, область, город федерального значения, автономная область, автономный округ имеет свой устав и законодательство.\\n\\n3. Федеративное устройство Российской Федерации основано на ее государственной целостности, единстве системы государственной власти, разграничении предметов ведения и полномочий между органами государственной власти Российской Федерации и органами государственной власти субъектов Российской Федерации, равноправии и самоопределении народов в Российской Федерации.\\n\\n4. Во взаимоотношениях с федеральными органами государственной власти все субъекты Российской Федерации между собой равноправны.\\n\\n\\nСтатья 6'],\n",
        " 'uris': None,\n",
@@ -184,13 +198,14 @@
        "  <IncludeEnum.metadatas: 'metadatas'>]}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "legal_docs_collection.get('baedf80e-0966-41a0-90c2-663bc1acec52')"
+    "ids = legal_docs_collection.get()['ids'][0]\n",
+    "legal_docs_collection.get(ids)"
    ]
   }
  ],
