--- a/practices/create_practice_collection.ipynb
+++ b/practices/create_practice_collection.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "import chromadb\n",
     "import numpy as np\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm, trange"
    ]
   },
   {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "CHROMADB_STORAGE_FOLDER = Path(\"/home/deniskirbaba/Documents/legal-ai/storage\")\n",
     "\n",
     "# directory with data, used to init legal practice collection (i.e. documents, embeddings, metadata)\n",
-    "LEGAL_PRACTICES_DATA_FOLDER = Path(\"/home/deniskirbaba/Documents/legal-ai/practice_db/data\")\n",
+    "LEGAL_PRACTICES_DATA_FOLDER = Path(\"/home/deniskirbaba/Documents/legal-ai/practices_data\")\n",
     "\n",
     "\n",
     "def squeeze_meta(meta: dict) -> dict:\n",
@@ -90,20 +90,26 @@
     "            summaries[summary_path.stem] = f.read()\n",
     "    logging.info(\"Successfully load summaries.\")\n",
     "\n",
-    "    # Add data to the collection\n",
-    "    collection.add(\n",
-    "        ids=doc_uids,\n",
-    "        embeddings=embs,\n",
-    "        metadatas=[squeeze_meta(metadatas[uid]) for uid in doc_uids],\n",
-    "        documents=[summaries[uid] for uid in doc_uids],\n",
-    "    )\n",
+    "    # Add data in batch maner, because maximum batch size is 41666\n",
+    "    batch_size = 16000\n",
+    "\n",
+    "    for i in trange(0, len(embs), batch_size):\n",
+    "        l, r = i, i + batch_size\n",
+    "\n",
+    "        # Add data to the collection\n",
+    "        collection.add(\n",
+    "            ids=doc_uids[l:r],\n",
+    "            embeddings=embs[l:r],\n",
+    "            metadatas=[squeeze_meta(metadatas[uid]) for uid in doc_uids[l:r]],\n",
+    "            documents=[summaries[uid] for uid in doc_uids[l:r]],\n",
+    "        )\n",
     "\n",
     "    return persistent_client, collection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -112,12 +118,18 @@
      "text": [
       "INFO:root:Start loading doc uids.\n",
       "INFO:root:Successfully load doc uids.\n",
-      "INFO:root:Start loading embeddings.\n",
+      "INFO:root:Start loading embeddings.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "INFO:root:Successfully load embeddings.\n",
       "INFO:root:Start loading metadatas.\n",
       "INFO:root:Successfully load metadatas.\n",
       "INFO:root:Start loading summaries.\n",
-      "32830it [00:18, 1800.36it/s]\n",
+      "45465it [00:07, 6309.31it/s]\n",
       "INFO:root:Successfully load summaries.\n"
      ]
     },
@@ -125,8 +137,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 48s, sys: 21.2 s, total: 2min 9s\n",
-      "Wall time: 2min 29s\n"
+      "CPU times: user 5min 2s, sys: 42.1 s, total: 5min 44s\n",
+      "Wall time: 6min 7s\n"
      ]
     }
    ],
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +165,7 @@
        "[Collection(name=legal_practices), Collection(name=legal_docs)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18052"
+       "45465"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,30 +196,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ids': ['gi9gPiMIqsQV'],\n",
-       " 'embeddings': None,\n",
-       " 'documents': ['### Резюме судебного решения\\n\\n#### 1. Основные сведения о деле:\\n\\n- **Регулируется:** Гражданским кодексом РФ (ГК РФ), Налоговым кодексом РФ (НК РФ), Конституцией РФ.\\n- **Тематика:** Спор о законности предпринимательской деятельности.\\n\\n#### 2. Стороны и обстоятельства дела:\\n\\n- **Истец:** Прокурор Акушинского района Республики Дагестан.\\n- **Ответчик:** Магомедов Шамиль Гаджиевич.\\n- **Ключевые обстоятельства:** Магомедов осуществлял торговую деятельность без государственной регистрации в качестве индивидуального предпринимателя, что является нарушением федерального законодательства.\\n\\n#### 3. Позиции сторон:\\n\\n- **Истец:** Прокурор утверждал, что Магомедов не зарегистрирован в качестве индивидуального предпринимателя, но занимается торговой деятельностью, что является нарушением законодательства. Просил признать деятельность незаконной и прекратить ее.\\n- **Ответчик:** Магомедов признал иск и подтвердил, что действительно осуществлял предпринимательскую деятельность без регистрации. Пояснил, что намерен зарегистрироваться в ближайшее время.\\n\\n#### 4. Решение суда:\\n\\n- **Итоговое решение:** Иск прокурора удовлетворен.\\n- **В чью пользу вынесено решение:** В пользу прокурора.\\n\\n#### 5. Обоснование решения:\\n\\n- **Ключевые выводы:**\\n  - Магомедов занимается предпринимательской деятельностью, направленной на систематическое получение прибыли, без регистрации в качестве индивидуального предпринимателя.\\n  - Данное обстоятельство подтверждается справкой Межрайонной ИФНС и протоколами о привлечении к административной ответственности.\\n  - Нарушение законодательства связано с отказом платить налоги, что нарушает требования ст. 57 Конституции РФ.\\n- **Законодательные акты:**\\n  - Гражданский кодекс РФ (ст. 2, ст. 23).\\n  - Налоговый кодекс РФ (ст. 83, ст. 11, ст. 333.36).\\n  - Конституция РФ (ст. 57).\\n  - Федеральный закон от 17.01.1992 № «О прокуратуре Российской Федерации» (ст. 35).\\n  - Гражданский процессуальный кодекс РФ (ст. 45, ст. 89, ст. 194-198).\\n\\n#### 6. Рекомендации или замечания:\\n\\n- В случае удовлетворения иска и после вступления решения в законную силу, суд обязан выписать и направить исполнительный лист для исполнения в соответствующий территориальный отдел УФССП России по Республике Дагестан.\\n\\n### Заключение\\n\\nРешение суда основывается на положениях ГК РФ, НК РФ, Конституции РФ, а также на ранее вынесенных решениях и справках, подтверждающих факт незаконной предпринимательской деятельности ответчика. Суд установил, что Магомедов нарушает требования законодательства, связанные с регистрацией и уплатой налогов, и постановил признать его деятельность незаконной и прекратить ее.'],\n",
-       " 'uris': None,\n",
-       " 'data': None,\n",
-       " 'metadatas': [{'codex': 'А',\n",
-       "   'theme': 'Осуществление предпринимательской деятельности без регистрации или без разрешения'}],\n",
-       " 'included': [<IncludeEnum.documents: 'documents'>,\n",
-       "  <IncludeEnum.metadatas: 'metadatas'>]}"
+       "dict_keys(['ids', 'embeddings', 'documents', 'uris', 'data', 'metadatas', 'included'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "legal_practices_collection.get(\"gi9gPiMIqsQV\")"
+    "legal_practices_collection.get().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ids': ['0l4Wt30zRKJj'],\n",
+       " 'embeddings': None,\n",
+       " 'documents': ['### Резюме судебного решения № 2-24/2024 от 15 января 2024 г. по делу № 2-24/2024\\n\\n#### 1. Основные сведения о деле:\\n- **Регулируется:** Гражданским кодексом Российской Федерации (ГК РФ) и Гражданским процессуальным кодексом Российской Федерации (ГПК РФ).\\n- **Тематика дела:** Спор о восстановлении срока для принятия наследства и признании факта принятия наследства.\\n\\n#### 2. Стороны и обстоятельства дела:\\n- **Истец:** ФИО1.\\n- **Ответчик:** Публичное акционерное общество Банк ВТБ.\\n- **Обстоятельства:** ФИО1, племянница умершего ФИО5, узнала о наличии ошибок в документах, подтверждающих их родство, что помешало своевременному обращению к нотариусу для принятия наследства. У ФИО5 имелся банковский счет в Банке ВТБ с денежными средствами. Иных наследников у ФИО5 нет.\\n\\n#### 3. Позиции сторон:\\n- **Истец:** ФИО1 ссылается на статью 1155 ГК РФ и просит восстановить срок для принятия наследства и признать факт принятия наследства в виде денежных средств на банковском счете.\\n- **Ответчик:** Не явился в судебное заседание, причины неявки не уведомил.\\n\\n#### 4. Решение суда:\\n- **Итоговое решение:** Исковые требования ФИО1 удовлетворены в полном объеме.\\n- **В чью пользу вынесено решение:** В пользу истца, ФИО1.\\n\\n#### 5. Обоснование решения:\\n- **Ключевые выводы суда:**\\n  - Истец не знала и не могла знать об открытии наследства из-за ошибок в документах, подтверждающих родство.\\n  - Причины пропуска срока для принятия наследства были уважительными.\\n  - Истец обратилась в суд в течение шести месяцев после отпадения причин пропуска срока.\\n  - Истец фактически приняла наследство, совершив действия, свидетельствующие о принятии наследства.\\n- **Законодательные акты и нормативные документы:**\\n  - Статьи 1152, 1153, 1154, 1155 ГК РФ.\\n  - Постановление Пленума Верховного Суда Российской Федерации от 29 мая 2012 г. № 9 \"О судебной практике по делам о наследовании\".\\n  - Статья 205 ГК РФ.\\n  - Статья 167 ГПК РФ.\\n  - Статьи 194–199 ГПК РФ.\\n\\n#### 6. Рекомендации или замечания:\\n- **Возможность апелляции:** Решение может быть обжаловано в апелляционном порядке в Забайкальский краевой суд через Забайкальский районный суд в течение месяца со дня принятия решения суда в окончательной форме.\\n\\n---\\n\\n**Примечание:** В резюме использованы вымышленные данные для защиты конфиденциальности сторон.'],\n",
+       " 'uris': None,\n",
+       " 'data': None,\n",
+       " 'metadatas': [{'codex': 'Г',\n",
+       "   'theme': 'Судебная практика по Гражданскому кодексу'}],\n",
+       " 'included': [<IncludeEnum.documents: 'documents'>,\n",
+       "  <IncludeEnum.metadatas: 'metadatas'>]}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids = legal_practices_collection.get()['ids'][0]\n",
+    "legal_practices_collection.get(ids)"
    ]
   }
  ],
